--- a/fitness-and-health-website/package.json
+++ b/fitness-and-health-website/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@auth0/auth0-spa-js": "^2.0.0"
+  }
 }
