--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "express": "^5.1.0",
     "express-oauth2-jwt-bearer": "^1.6.1",
     "express-openid-connect": "^2.18.1"
